# Lattice

./: .gitignore
.github/workflows/: lattice-packages.yml  lattice-semantic-release.yml
lattice-backend/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  key_items.yaml
lattice-backend/backend-application/: Cargo.toml
lattice-backend/backend-application/src/: commands.rs  detect.rs  dtos.rs  error.rs  ingest.rs  lib.rs  metrics.rs  ops.rs  queries.rs  query.rs  state.rs
lattice-backend/backend-application/src/commands/: ingest_commands.rs  item_registry_commands.rs  key_item_commands.rs  mod_config_commands.rs  op_token_commands.rs  task_progress_commands.rs
lattice-backend/backend-application/src/dtos/: anomaly_dto.rs
lattice-backend/backend-application/src/ops/: mod_config_stream_hub.rs
lattice-backend/backend-application/src/queries/: anomaly_queries.rs  item_registry_queries.rs  key_item_queries.rs  mod_config_queries.rs  storage_scan_queries.rs  task_progress_queries.rs
lattice-backend/backend-bootstrap/: Cargo.toml
lattice-backend/backend-bootstrap/src/: context.rs  lib.rs  lifecycle.rs  main.rs  napcat_bridge.rs
lattice-backend/backend-domain/: Cargo.toml
lattice-backend/backend-domain/src/: entities.rs  lib.rs  ports.rs  services.rs  value_objects.rs
lattice-backend/backend-domain/src/entities/: anomaly.rs  event.rs  item_registry.rs  key_item_rule.rs  model.rs  task_status.rs
lattice-backend/backend-domain/src/ports/: repositories.rs  services.rs
lattice-backend/backend-domain/src/services/: analyzer.rs
lattice-backend/backend-domain/src/value_objects/: identifiers.rs  origin_type.rs  risk_level.rs
lattice-backend/backend-infrastructure/: Cargo.toml
lattice-backend/backend-infrastructure/src/: config.rs  lib.rs  repositories.rs  services.rs  utils.rs
lattice-backend/backend-infrastructure/src/config/: app_config.rs  validation.rs
lattice-backend/backend-infrastructure/src/repositories/: clickhouse.rs  config_files.rs
lattice-backend/backend-infrastructure/src/services/: alert_service.rs  health_service.rs  report_service.rs
lattice-backend/backend-interfaces-http/: Cargo.toml
lattice-backend/backend-interfaces-http/src/: error.rs  handlers.rs  lib.rs  middleware.rs
lattice-backend/backend-interfaces-http/src/handlers/: detect_handlers.rs  ingest_handlers.rs  ops_handlers.rs  query_handlers.rs
lattice-backend/backend-interfaces-http/src/middleware/: auth.rs  logging.rs
lattice-backend/backend-interfaces-http/src/routes/: v2.rs
lattice-backend/docs/: alert-delivery.md  http-v2-contract.md
lattice-backend/src/: README_DEPRECATED.md  alert.rs  analyzer.rs  app.rs  config.rs  db.rs  error.rs  ingest.rs  lib.rs  main.rs  model.rs  report.rs  web.rs
lattice-desktop/: .releaserc.cjs  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
lattice-desktop/docs/: apple-dev-mcp-setup.md
lattice-desktop/scripts/: apple-dev-mcp-stdio-bridge.mjs  sync-release-version.mjs
lattice-desktop/src/: app.tsx  index.css  router.tsx
lattice-desktop/src-tauri/: Cargo.toml  item_registry.json  tauri.conf.json
lattice-desktop/src-tauri/capabilities/: default.json
lattice-desktop/src-tauri/icons/: icon.icns
lattice-desktop/src-tauri/src/: lib.rs  main.rs
lattice-desktop/src/components/: about-dialog.tsx  date-filter-field.tsx  floating-tool-bar.tsx  item-mark.tsx  page-state.tsx  status-pill.tsx  table-pager.tsx
lattice-desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx
lattice-desktop/src/lib/: api.ts  datetime.ts  metrics.ts  motion.ts  settings.tsx  status-badge.ts  storage.ts  types.ts
lattice-desktop/src/pages/: anomalies.tsx  investigate.tsx  operations.tsx  overview.tsx  policy.tsx  rcon-console.tsx  storage-scan.tsx  system.tsx
lattice-mod/: build.gradle.kts  gradle.properties  settings.gradle.kts
lattice-mod/docs/: op-token-auth.md  scan-behavior.md
lattice-mod/src/main/java/com/lattice/: Lattice.java
lattice-mod/src/main/java/com/lattice/audit/: AuditSnapshot.java  Rs2SnapshotReader.java
lattice-mod/src/main/java/com/lattice/auth/: OpCommandTokenManager.java  OpTokenMisuseReporter.java
lattice-mod/src/main/java/com/lattice/commands/: LatticeCommands.java
lattice-mod/src/main/java/com/lattice/config/: LatticeConfig.java  RuntimeConfigStore.java
lattice-mod/src/main/java/com/lattice/config/sync/: ConfigSyncManager.java
lattice-mod/src/main/java/com/lattice/events/: EventFactory.java  EventPayload.java  EventQueue.java
lattice-mod/src/main/java/com/lattice/http/: BackendClient.java
lattice-mod/src/main/java/com/lattice/integrations/: IntegrationManager.java  Rs2Integration.java  StorageContextResolver.java
lattice-mod/src/main/java/com/lattice/logging/: StructuredOpsLogger.java
lattice-mod/src/main/java/com/lattice/mixin/: AbstractContainerMenuMixin.java  CommandsMixin.java  FurnaceResultSlotMixin.java  InventoryMixin.java  ItemEntityMixin.java  MerchantResultSlotMixin.java  PlayerMixin.java  ResultSlotMixin.java
lattice-mod/src/main/java/com/lattice/mixin/compat/: Rs2RootStorageMixin.java
lattice-mod/src/main/java/com/lattice/progress/: TaskProgressReporter.java
lattice-mod/src/main/java/com/lattice/rcon/: RconConfigReporter.java
lattice-mod/src/main/java/com/lattice/registry/: ItemRegistryReporter.java
lattice-mod/src/main/java/com/lattice/scan/: InventoryNbtParser.java  StorageScanner.java
lattice-mod/src/main/java/com/lattice/scheduler/: MonitorScheduler.java
lattice-mod/src/main/java/com/lattice/track/: ContextHolder.java  ItemOrigin.java  ItemTrace.java  StorageContext.java
lattice-mod/src/main/resources/: fabric.mod.json  lattice.mixins.compat.json  lattice.mixins.json
