[workspace]
members = [
    "backend-domain",
    "backend-application",
    "backend-infrastructure",
    "backend-interfaces-http",
    "backend-bootstrap",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Loopwic"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# HTTP / Web
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors", "limit", "timeout"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database
clickhouse = { version = "0.11", features = ["time"] }

# Compression
flate2 = "1.0"

# WebSocket
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Utilities
uuid = { version = "1.8", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
