[package]
name = "backend-bootstrap"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "lattice-backend"
path = "src/main.rs"

[dependencies]
# Bootstrap orchestrates all layers
backend-domain = { path = "../backend-domain" }
backend-application = { path = "../backend-application" }
backend-infrastructure = { path = "../backend-infrastructure" }
backend-interfaces-http = { path = "../backend-interfaces-http" }

# Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP
axum = { workspace = true }
tower-http = { workspace = true }
clickhouse = { workspace = true }

# CLI
clap = { workspace = true }

# Config
toml = { workspace = true }
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
