[package]
name = "lattice-desktop"
version = "0.2.6"
description = "A Tauri App"
authors = ["Loopwic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lattice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lattice-backend = { package = "backend-bootstrap", path = "../../lattice-backend/backend-bootstrap" }
rcon = { version = "0.6.0", default-features = false, features = ["rt-tokio"] }
toml = "0.8"
tokio = { version = "1", features = ["net", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
